// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Create Alert 1`] = `
.c0 {
  position: relative;
  padding: .75rem 1.25rem;
  margin-bottom: 1rem;
  border: 1px solid transparent;
  border-radius: 0.25rem;
  color: #08488c;
  background-color: #cce4ff;
  border-color: #b7daff;
}

.c0 a {
  font-weight: bold;
}

.c0 hr {
  border-top-color: #9ecdff;
}

.c0 a {
  color: #052f5c;
}

<div
  className="c0"
  type="primary"
/>
`;

exports[`Create DismissableAlert 1`] = `
.c0 {
  position: relative;
  padding: .75rem 1.25rem;
  margin-bottom: 1rem;
  border: 1px solid transparent;
  border-radius: 0.25rem;
  color: #08488c;
  background-color: #cce4ff;
  border-color: #b7daff;
}

.c0 a {
  font-weight: bold;
}

.c0 hr {
  border-top-color: #9ecdff;
}

.c0 a {
  color: #052f5c;
}

.c3 {
  font-size: 1.5rem;
  font-weight: 700;
  line-height: 1;
  color: #000;
  text-shadow: 0 1px 0 #fff;
  opacity: 0.5;
  padding: 0;
  background: transparent;
  border: 0;
  -webkit-appearance: none;
}

.c3:focus,
.c3:hover {
  color: (props = {}) =>(0,_lodash2.default)(props.theme,path,defaultValue);
  -webkit-text-decoration: none;
  text-decoration: none;
  opacity: .75;
}

.c3:not(:disabled):not(.disabled) {
  cursor: pointer;
}

.c2 {
  padding: .75rem 1.25rem;
  color: inherit;
  position: absolute;
  top: 0;
  right: 0;
}

.c1 {
  position: absolute;
  top: 0;
  right: 0;
  padding: .75rem 1.25rem;
  cursor: pointer;
  background: transparent;
  border: 0;
  -webkit-appearance: none;
  opacity: 0.5;
}

.c1:focus,
.c1:hover {
  color: #000;
  -webkit-text-decoration: none;
  text-decoration: none;
  opacity: .75;
}

<div
  className="c0"
  type="primary"
>
  <button
    className="c1"
    onClick={undefined}
  />
  <button
    aria-label="Close"
    className="c2 c3"
    onClick={undefined}
  >
    <span
      aria-hidden="true"
    >
      ×
    </span>
  </button>
</div>
`;

exports[`Create DismissableAlert with onClose 1`] = `
.c0 {
  position: relative;
  padding: .75rem 1.25rem;
  margin-bottom: 1rem;
  border: 1px solid transparent;
  border-radius: 0.25rem;
  color: #08488c;
  background-color: #cce4ff;
  border-color: #b7daff;
}

.c0 a {
  font-weight: bold;
}

.c0 hr {
  border-top-color: #9ecdff;
}

.c0 a {
  color: #052f5c;
}

.c3 {
  font-size: 1.5rem;
  font-weight: 700;
  line-height: 1;
  color: #000;
  text-shadow: 0 1px 0 #fff;
  opacity: 0.5;
  padding: 0;
  background: transparent;
  border: 0;
  -webkit-appearance: none;
}

.c3:focus,
.c3:hover {
  color: (props = {}) =>(0,_lodash2.default)(props.theme,path,defaultValue);
  -webkit-text-decoration: none;
  text-decoration: none;
  opacity: .75;
}

.c3:not(:disabled):not(.disabled) {
  cursor: pointer;
}

.c2 {
  padding: .75rem 1.25rem;
  color: inherit;
  position: absolute;
  top: 0;
  right: 0;
}

.c1 {
  position: absolute;
  top: 0;
  right: 0;
  padding: .75rem 1.25rem;
  cursor: pointer;
  background: transparent;
  border: 0;
  -webkit-appearance: none;
  opacity: 0.5;
}

.c1:focus,
.c1:hover {
  color: #000;
  -webkit-text-decoration: none;
  text-decoration: none;
  opacity: .75;
}

<div
  className="c0"
  type="primary"
>
  <button
    className="c1"
    onClick={[Function]}
  />
  <button
    aria-label="Close"
    className="c2 c3"
    onClick={[Function]}
  >
    <span
      aria-hidden="true"
    >
      ×
    </span>
  </button>
</div>
`;
